--- a/app/components/shared/footer/footer.html
+++ b/app/components/shared/footer/footer.html
@@ -1,10 +1,10 @@
 <footer>
 
     <ul>
-        <li><a href="/donate/">Spenden</a></li>
-        <li><a href="/rules/">Regeln</a></li>
-        <li><a href="/privacy/">Datenschutz</a></li>
-        <li><a href="/imprint/">Impressum</a></li>
+        <li><a href="/donate/" translate="FOOTER_DONATE"></a></li>
+        <li><a href="/rules/" translate="FOOTER_RULES"></a></li>
+        <li><a href="/privacy/" translate="FOOTER_PRIVACY"></a></li>
+        <li><a href="/imprint/" translate="FOOTER_IMPRINT"></a></li>
     </ul>
 
 </footer>
