--- a/app/components/static/imprint.html
+++ b/app/components/static/imprint.html
@@ -1,33 +1,22 @@
-<h2>Impressum</h2>
-<h3>Gemäß § 5 TMG</h3>
+<h2 translate="IMPRINT_TITLE"></h2>
+<h3 translate="IMPRINT_REFERENCE"></h3>
 
-<p><strong>Hinweis:</strong> Für generelle Supportanfragen ist die <a href="/community/">Community</a> gedacht. Dieses Impressum gilt auch für unseren <a href="https://twitter.com/DieShownotes">Twitter</a>- und <a href="https://alpha.app.net/shownotes">App.net</a>-Account.</p>
+<p translate="IMPRINT_HINT"></p>
 
-<h3>Anschrift</h3>
+<h3 translate="IMPRINT_ADDRESS_TITLE"></h3>
+<p translate="IMPRINT_ADDRESS"></p>
+<p translate="IMPRINT_VISIT"></p>
 
-<p>
-	shownot.es<br />
-	c/o Evita Bley<br />
-	Poststraße 33<br />
-	01159 Dresden
-</p>
-<p>Von unangekündigten Besuchen raten wir ab.</p>
+<h3 translate="IMPRINT_CONTACT_TITLE"></h3>
+<p translate="IMPRINT_CONTACT"></p>
+<p translate="IMPRINT_MAIL"></p>
 
-<h3>Kontakt</h3>
+<h3 translate="IMPRINT_COPYRIGHT_TITLE"></h3>
+<p translate="IMPRINT_COPYRIGHT"></p>
 
-<p>
-	E-Mail-Adresse: <a href="mailto:intern@shownot.es">intern@shownot.es</a><br />
-	Telefonnummer: 030 / 555 795 69
-</p>
-<p>Kontaktanfragen via E-Mail werden bevorzugt.</p>
+<h3 translate="IMPRINT_OTHER_TITLE"></h3>
+<p translate="IMPRINT_OTHER_TEXT"></p>
 
-<h3>Urheberrecht</h3>
-
-<p>Alle veröffentlichten Textinhalte stehen, soweit nicht anders vermerkt, unter der <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.de" rel="license" title="CC0 1.0 Universell (Public Domain Dedication)">CC0-Lizenz</a> (<em><q>Public Domain Dedication</q></em>, bedingungslose Lizenz). Andere Inhalte, insbesondere die Cover-Bilder, können davon abweichen.</p>
-
-<h3>Sonstiges</h3>
-
-<p>Diese Seite basiert auf Open-Source-Software wie <a href="https://angularjs.org">AngularJS</a>, <a href="https://www.djangoproject.com">Django</a> und <a href="etherpad.org">Etherpad</a>.</p>
-<p><a href="https://uberspace.de/"><img src="images/uberspace-badge.png" alt="shownot.es wird von Uberspace gehostet" /></a></p>
+<p><a href="https://uberspace.de/"><img src="images/uberspace-badge.png" alt="" /></a></p>
 
 <snotes-footer></snotes-footer>
