--- a/app/components/static/rules.html
+++ b/app/components/static/rules.html
@@ -1,29 +1,9 @@
-<h2>Regeln</h2>
+<h2 translate="RULES_TITLE"></h2>
 
-<p>Jedes registrierte Mitglied verpflichtet sich dazu, die folgenden Regeln zu akzeptieren:</p>
+<p translate="RULES_TEXT"></p>
 
-<ol class="rules">
-	<li>
-		<strong>Das Obligatorische vorab: Freundlichkeit zahlt sich aus.</strong><br />
-		Ein guter Umgangston ist selbstverständlich. Bei Unklarheiten darf jederzeit nachgefragt werden.
-	</li>
-	<li>
-		<strong>Sendungsnotizen werden gewissenhaft mitgeschrieben.</strong><br />
-		Inhalte dürfen nicht absichtlich verfälscht werden.
-	</li>
-	<li>
-		<strong>Alle erstellten Inhalte werden unter der <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.de" rel="license">CC0-Lizenz</a> veröffentlicht.</strong><br />
-		Das heißt kurz und knapp: Sämtliche Rechte werden abgetreten &mdash; jeder kann damit tun, was er möchte.
-	</li>
-	<li>
-		<strong>Die Mitarbeit erfolgt auf freiwilliger Basis.</strong><br />
-		Wir bezahlen dich nicht. Eingenommene <a href="/donate/">Spenden</a> kommen der Plattform zugute.</li>
-	<li>
-		<strong>Spam ist absolut verboten.</strong><br />
-		Das gilt sowohl für den Editor und den dazugehörigen Chat, als auch für unseren IRC-Kanal und E-Mail-Verkehr.
-	</li>
-</ol>
+<ol class="rules" translate="RULES_RULES"></ol>
 
-<p>Bei Regelverstößen behalten wir uns vor, Mitglieder nach eigenem Ermessen von der Plattform auszuschließen. Weitere Informationen finden sich bei den <a href="/faq/">häufig gestellten Fragen</a>.</p>
+<p translate="RULES_VIOLATION"></p>
 
 <snotes-footer></snotes-footer>
