--- a/app/components/user/regcomplete/regcomplete.html
+++ b/app/components/user/regcomplete/regcomplete.html
@@ -1,5 +1,5 @@
-<h2>Registration erfolgreich</h2>
-<h3>Hinweis</h3>
+<h2 translate="USER_REG_COMPLETE_TITLE"></h2>
+<h3 translate="USER_REG_COMPLETE_HINT"></h3>
 
-<p>Vielen Dank, dein Account wurde erstellt!</p>
-<p>Bitte bestätige deine E-Mail-Adresse, indem du auf den Link klickst, der dir soeben via E-Mail zugeschickt wurde.</p>
+<p translate="USER_REG_COMPLETE_ACCOUNT"></p>
+<p translate="USER_REG_COMPLETE_CONFIRM"></p>
