--- a/app/components/static/faq.html
+++ b/app/components/static/faq.html
@@ -1,120 +1,86 @@
-<h2>Häufig gestellte Fragen</h2>
+<h2 translate="FAQ_TITLE"></h2>
 
 <div class="box-wrapper">
 
-	<h3>Allgemeine Fragen</h3>
+	<h3 translate="FAQ_GENERAL_QUESTIONS"></h3>
 
 	<ul>
-		<li><a href="/faq/#shownotes">Was ist shownot.es?</a></li>
-		<li><a href="/faq/#sendungsnotizen">Was sind Sendungsnotizen?</a></li>
-		<li><a href="/faq/#osf">Was ist OSF?</a></li>
-		<li><a href="/faq/#englisch">Gibt es diese Plattform auch auf Englisch? / Is there an English version of this platform?</a></li>
-		<li><a href="/faq/#entwickeln">Kann ich dabei helfen, shownot.es weiterzuentwickeln?</a></li>
-		<li><a href="/faq/#lizenz">Unter welcher Lizenz stehen die hier erstellten und veröffentlichten Inhalte?</a></li>
+		<li><a href="/faq/#shownotes" translate="FAQ_SHOWNOTES"></a></li>
+		<li><a href="/faq/#show_notes" translate="FAQ_SHOW_NOTES"></a></li>
+		<li><a href="/faq/#osf" translate="FAQ_OSF"></a></li>
+		<li><a href="/faq/#english" translate="FAQ_ENGLISH"></a></li>
+		<li><a href="/faq/#develop" translate="FAQ_DEVELOP"></a></li>
+		<li><a href="/faq/#license" translate="FAQ_LICENSE"></a></li>
 	</ul>
 
 	<hr />
 
-	<h3>Fragen von Shownotern</h3>
+	<h3 translate="FAQ_SHOWNOTER_QUESTIONS"></h3>
 
 	<ul>
-		<li><a href="/faq/#helfen">Wie kann ich mich beteiligen?</a></li>
-		<li><a href="/faq/#bezahlung">Wieso bekomme ich als Helfer kein Geld?</a></li>
+		<li><a href="/faq/#help" translate="FAQ_HELP"></a></li>
+		<li><a href="/faq/#payment" translate="FAQ_PAYMENT"></a></li>
 	</ul>
 
 	<hr />
 
-	<h3>Fragen von Podcastern</h3>
+	<h3 translate="FAQ_PODCASTER_QUESTIONS"></h3>
 
 	<ul>
-		<li><a href="/faq/#vorteil">Welchen Vorteil haben Sendungsnotizen?</a></li>
-		<li><a href="/faq/#meinpodcast">Wie kommt mein Podcast auf shownot.es?</a></li>
-		<li><a href="/faq/#helferfinden">Wie überzeuge ich meine Hörer, Sendungsnotizen zu schreiben?</a></li>
-		<li><a href="/faq/#belohnen">Bin ich dazu verpflichtet, die Helfer namentlich zu nennen oder zu belohnen?</a></li>
+		<li><a href="/faq/#advantage" translate="FAQ_ADVANTAGE"></a></li>
+		<li><a href="/faq/#my_podcast" translate="FAQ_MY_PODCAST"></a></li>
+		<li><a href="/faq/#find_helper" translate="FAQ_FIND_HELPER"></a></li>
+		<li><a href="/faq/#rewards" translate="FAQ_REWARDS"></a></li>
 	</ul>
 
-	<p>Deine Frage ist nicht dabei? Wende dich an die <a href="/community/">Community</a> oder schick uns eine <a href="mailto:intern@shownot.es">E-Mail</a>!</p>
+	<p translate="FAQ_NEW_QUESTION"></p>
 
 </div>
 
-<h3>Allgemeine Antworten</h3>
+<h3 translate="FAQ_GENERAL_ANSWERS"></h3>
 
-<h4 id="shownotes">Was ist shownot.es?</h4>
-<p>
-	<em>shownot.es</em> ist eine <a href="https://de.wikipedia.org/wiki/Crowdsourcing">kollaborative</a> Plattform, auf der <a href="https://de.wikipedia.org/wiki/Podcasting#Sendungsnotizen">Sendungsnotizen</a> (engl. <em><q>show notes</q></em>) für <a href="https://de.wikipedia.org/wiki/Podcasting">Podcasts</a> verfasst werden. Freiwillige Helfer (<em><q>Shownoter</q></em>) hören sich gemeinsam Sendungen an und schreiben Stichpunkte mit, sammeln Links oder suchen weitere Informationen.
-</p>
+<h4 id="shownotes" translate="FAQ_SHOWNOTES"></h4>
+<p translate="FAQ_SHOWNOTES_ANSWER"></p>
 
-<h4 id="sendungsnotizen">Was sind Sendungsnotizen?</h4>
-<p
-	Sendungsnotizen sind <a href="https://de.wikipedia.org/wiki/Metadaten">Metadaten</a> von Podcasts. Sie enthalten nicht den Podcast selbst, aber beschreibende Informationen, die in der Regel mit einer Zeitangabe versehen sind. Dadurch werden die Inhalte von reinen Audioformaten durchsuchbar.
-</p>
+<h4 id="show_notes" translate="FAQ_SHOW_NOTES"></h4>
+<p translate="FAQ_SHOW_NOTES_ANSWER"></p>
 
-<h4 id="osf">Was ist OSF?</h4>
-<p>
-	<q>OSF</q> steht für <em><q>Open Shownotes Format</q></em>. Dieses von uns definierte Format soll die Erstellung von Sendungsnotizen erleichtern und standardisieren. Beispiel für eine Zeile in OSF:<br />
-	<code>00:13:37 Geofencing &lt;https://de.wikipedia.org/wiki/Geofencing&gt; #g</code><br />
-	Von links nach rechts: <em>Zeitstempel</em>, <em>Textangabe</em>, <em>Link</em>, <em>Tag</em>. Eine <a href="https://github.com/shownotes/OpenShownotesFormat">ausführliche Dokumentation</a> gibt es auch.
-</p>
+<h4 id="osf" translate="FAQ_OSF"></h4>
+<p translate="FAQ_OSF_ANSWER"></p>
 
-<h4 id="englisch">
-	Gibt es diese Plattform auch auf Englisch?<br />
-	<span lang="en"><em>Is there an English version of this platform?</em></span>
-</h4>
-<p>
-	Zurzeit nicht, nein. Wir halten dich auf dem Laufenden!<br />
-	<span lang="en"><em>Currently, there isn't. But stay tuned!</em></span>
-</p>
+<h4 id="english" translate="FAQ_ENGLISH"></h4>
+<p translate="FAQ_ENGLISH_ANSWER"></p>
 
-<h4 id="entwickeln">Kann ich dabei helfen, die shownot.es weiterzuentwickeln?</h4>
-	Selbstverständlich! Wir sind ständig auf der Suche nach neuen Entwicklern. Ein <a href="https://github.com/shownotes">GitHub</a>-Account ist dafür die einzige Voraussetzung.
-</p>
+<h4 id="develop" translate="FAQ_DEVELOP"></h4>
+<p translate="FAQ_DEVELOP_ANSWER"></p>
 
-<h4 id="lizenz">Unter welcher Lizenz stehen die hier erstellten und veröffentlichten Inhalte?</h4>
-<p>
-	Alle Textinhalte stehen grundsätzlich unter der <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.de" rel="license" title="CC0 1.0 Universell (Public Domain Dedication)">CC0-Lizenz</a>. Das heißt knapp zusammengfasst: Jeder darf damit &mdash; auch ohne Quellenangabe &mdash; machen, was er möchte.
-</p>
+<h4 id="license" translate="FAQ_LICENSE"></h4>
+<p translate="FAQ_LICENSE_ANSWER"></p>
 
 <hr />
 
-<h3>Antworten an Shownoter</h3>
+<h3 translate="FAQ_SHOWNOTER_ANSWERS"></h3>
 
-<h4 id="helfen">Wie kann ich mich beteiligen?</h4>
-<p>
-	Wir empfehlen dir, dich zunächst unter <em>Mein Account</em> zu registrieren. Während einer Livesendung kannst im dazugehörigen <q>Pad</q> stichpunktartig das Wichtigste mitnotieren.<br />
-	Berühungsängste? &mdash; Keine Sorge, wir verbessern uns alle gegenseitig. Jede Kleinigkeit hilft.
-</p>
+<h4 id="help" translate="FAQ_HELP"></h4>
+<p translate="FAQ_HELP_ANSWER"></p>
 
-<h4 id="bezahlung">Wieso bekomme ich als Helfer kein Geld?</h4>
-<p>
-	<em>shownot.es</em> ist ein Projekt von, mit und für Freiwillige. Die <a href="/donate/">Spenden</a> reichen, um anfallende Kosten zu decken &mdash; die faire <q>Bezahlung</q> von selbst einer einzigen Person ist hingegen (noch) utopisch.
-</p>
+<h4 id="payment" translate="FAQ_PAYMENT"></h4>
+<p translate="FAQ_PAYMENT_ANSWER"></p>
 
 <hr />
 
-<h3>Antworten an Podcaster</h3>
+<h3 translate="FAQ_PODCASTER_ANSWERS"></h3>
 
-<h4 id="vorteil">Welchen Vorteil haben Sendungsnotizen?</h4>
-<ul>
-	<li>Sie bieten potenziellen Hörern bereits vorab einen Überblick der Podcastinhalte.</li>
-	<li>Während des Hörens kann man bequem über Links auf weiterführende Themen und angesprochende Begriffe zugreifen.</li>
-	<li>Hörgeschädigte werden nicht gänzlich ausgeschlossen.</li>
-	<li>Die Episoden eines Podcasts mit Sendungsnotizen können einfacher durchsucht werden.</li>
-</ul>
+<h4 id="advantage" translate="FAQ_ADVANTAGE"></h4>
+<ul translate="FAQ_ADVANTAGE_ANSWER"></ul>
 
-<h4 id="meinpodcast">Wie kommt mein Podcast auf shownot.es?</h4>
-<p>
-	<em>shownot.es</em> führt derzeit alle Podcasts mit Livesendungen im Verzeichnis der <a href="http://hoersuppe.de">Hörsuppe</a> auf.
-</p>
+<h4 id="my_podcast" translate="FAQ_MY_PODCAST"></h4>
+<p translate="FAQ_MY_PODCAST_ANSWER"></p>
 
-<h4 id="helferfinden">Wie überzeuge ich meine Hörer, Sendungsnotizen zu schreiben?</h4>
-<p>
-	Erwähne diese Plattform. Erzähle etwas darüber. Fordere deine Hörer auf, es einmal zu versuchen.
-</p>
+<h4 id="find_helper" translate="FAQ_FIND_HELPER"></h4>
+<p translate="FAQ_FIND_HELPER_ANSWER"></p>
 
-<h4 id="belohnen">Bin ich dazu verpflichtet, die Helfer namentlich zu nennen oder zu belohnen?</h4>
-<p>
-	Die kurze Antwort: nein.<br />
-	Die lange: Wie du dich bei Shownotern bedankst, ist dir überlassen. Freiwillige Arbeit erfodert allerdings immer auch Motivation. Daher gehört mindestens die Erwähnung der Helfer zum guten Ton. Du kannst sie natürlich auch flattern oder ihnen kleine Aufmerksamkeiten zukommen lassen.
-</p>
+<h4 id="rewards" translate="FAQ_REWARDS"></h4>
+<p translate="FAQ_REWARDS_ANSWER"></p>
 
 <snotes-footer></snotes-footer>
