--- a/app/components/user/upgrade/upgrade.html
+++ b/app/components/user/upgrade/upgrade.html
@@ -1,25 +1,25 @@
-<h2>Die neue Plattform</h2>
-<h3>Wie aufregend!</h3>
+<h2 translate="USER_UPGRADE_TITLE"></h2>
+<h3 translate="USER_UPGRADE_HINT"></h3>
 
-<p>Hallo <em>{{currentUser.username}}</em>! Wie du siehst, hat sich hier einiges verändert.</p>
+<p translate="USER_UPGRADE_HELLO" translate-value="{ name: '{{currentUser.username}}"></p>
 
-<p>Da du bereits beim alten <em>ShowPad</em> einen Account hattest, möchten wir dich bitten, dein Passwort aus Sicherheitsgründen zu ändern und unsere neuen <a href="/rules">Regeln</a> zu akzeptieren.</p>
+<p translate="USER_UPGRADE_RULES"></p>
 
 <div class="box-wrapper">
-	<h3>Daten aktualisieren</h3>
+	<h3 translate="USER_UPGRADE_DATA"></h3>
 
 	<form class="form-wrapper">
-		<input type="password" value="" placeholder="Neues Passwort" ng-model="upgrade.password" />
-		<input type="password" value="" placeholder="Neues Passwort bestätigen" ng-model="upgrade.password2" equals="{{upgrade.password}}" />
+		<input type="password" value="" placeholder="{{ 'USER_UPGRADE_PASSWORD_NEW' | translate }}" ng-model="upgrade.password" />
+		<input type="password" value="" placeholder="{{ 'USER_UPGRADE_PASSWORD_CONFIRM' | translate }}" ng-model="upgrade.password2" equals="{{upgrade.password}}" />
 		<!--<div class="form-check">
 			<input id="checkrules-upgrade" type="checkbox" value="checkrules" ng-model="upgrade.rules" />
 			<label for="checkrules-upgrade">Ich akzeptiere die <a href="/rules">Regeln</a>.</label>
 		</div>-->
-		<input type="submit" value="Speichern und fortfahren" ng-click="doUpgrade()" />
-        <action-status  success-text=""
-                        fail-text="Bitte überprüfe noch einmal deine Angaben."
+		<input type="submit" value="{{ 'USER_UPGRADE_PASSWORD_SAVE' | translate }}" ng-click="doUpgrade()" />
+        <action-status  success-text="{{ 'USER_UPGRADE_PASSWORD_SUCCESS' | translate }}"
+                        fail-text="{{ 'USER_UPGRADE_PASSWORD_ERROR' | translate }}"
                         active="upgradeStatus.active" status="upgradeStatus.status"></action-status>
 	</form>
 </div>
 
-<p>Bei Unklarheiten kannst du einen Blick auf die <a href="/faq/">häufig gestellten Fragen</a> werfen.</p>
+<p translate="USER_UPGRADE_FAQ"></p>
