--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -962,7 +962,7 @@ nav li > input[type="checkbox"] {
 	-webkit-flex-flow: row;
 	flex-direction: row;
 }
-.cover-heaver > a {
+.cover-header > a {
 	display: block;
 }
 .cover-header img {
