deactivate chat in editor

--- a/app/components/document/edit/document-edit.html
+++ b/app/components/document/edit/document-edit.html
@@ -47,7 +47,7 @@
 
 	</div>
 
-	<div class="chat">
+	<!--<div class="chat">-->
 
 		<!--<div class="userlist">
 			<h3><span class="icon-users"></span> Jetzt online: 3</h3>
@@ -67,7 +67,7 @@
 			</ul>
 		</div>-->
 
-		<div class="chatmsgs">
+		<!--<div class="chatmsgs">
 			<p ng-repeat="msg in chatmessages" style="background-color: #{{msg.issuer.color}}">
 				<time>{{msg.date | date: 'shortTime'}}</time>
 				<strong>{{msg.issuer.name}}:</strong> {{msg.message}}
@@ -79,6 +79,6 @@
 			<input type="submit" value="{{ 'DOCUMENT_EDIT_CHAT_SEND' | translate }}" ng-click="sendChatMsg()" />
 		</form>
 
-	</div>
+	</div>-->
 
 </div>
