close <a> tag on profile

--- a/app/components/user/profile/profile.html
+++ b/app/components/user/profile/profile.html
@@ -1,7 +1,7 @@
 <h2 translate="USER_PROFILE_TITLE"></h2>
 <h3 translate="USER_PROFILE_HOME"></h3>
 
-<p>{{ 'USER_PROFILE_HELLO1' | translate }}<em>{{user.username}}</em>!{{ 'USER_PROFILE_HELLO2' | translate }}<a ui-sref="publicprofile({ username: $root.currentUser.username })">{{ 'USER_PROFILE_HELLO3' | translate }}</p>
+<p>{{ 'USER_PROFILE_HELLO1' | translate }}<em>{{user.username}}</em>!{{ 'USER_PROFILE_HELLO2' | translate }}<a ui-sref="publicprofile({ username: $root.currentUser.username })">{{ 'USER_PROFILE_HELLO3' | translate }}</a></p>
 
 
 <div class="box-wrapper">
