--- a/app/components/document/readonly/document-readonly.html
+++ b/app/components/document/readonly/document-readonly.html
@@ -9,7 +9,7 @@
 		<div>
 			<h2>{{episode.podcast.title}} {{episode.number}}</h2>
 			<h3>{{episode.date | date:'medium'}}</h3>
-			<a href="{{currentUrl}}edit/" translate="DOCUMENT_READONLY_EDIT"></a>
+			<a href="{{docEditUrl}}" translate="DOCUMENT_READONLY_EDIT"></a>
 			<a class="statuslabel report" href="#" translate="DOCUMENT_READONLY_PROBLEM"></a>
 			<script id='fbmmapi'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//api.flattr.com/button/view/?uid=Shownotes&button=compact&url='+encodeURIComponent(document.URL);f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('fbmmapi');</script>
 		</div>
