remove documentmeta, store data in document directly

--- a/app/components/document/edit/document-edit.html
+++ b/app/components/document/edit/document-edit.html
@@ -35,7 +35,7 @@
 			<div class="shownotes-meta">
 
 				<p><strong translate="DOCUMENT_EDIT_PODCASTER"></strong>:</p>
-				<name-list names="doc.meta.podcasters" name-attr="name" add-name="addPodcaster" del-name="delPodcaster"></name-list>
+				<name-list names="doc.podcasters" name-attr="name" add-name="addPodcaster" del-name="delPodcaster"></name-list>
 
 			</div>
 
