Basic integration of OSF converter

--- a/app/components/sidebar/sidebar.html
+++ b/app/components/sidebar/sidebar.html
@@ -92,6 +92,13 @@
                 <span class="icon-podcast"></span><span class="caption" translate="SIDEBAR_SHOWS"></span>
             </a>
         </li>
+        <!--
+        <li title="{{ 'SIDEBAR_WANDLER' | translate }}">
+            <a href="/wandler/">
+                <span class="icon-podcast"></span><span class="caption" translate="SIDEBAR_WANDLER"></span>
+            </a>
+        </li>
+        -->
         <li title="{{ 'SIDEBAR_FAQ_TITLE' | translate }}">
             <a href="/faq/">
                 <span class="icon-info"></span><span class="caption" translate="SIDEBAR_FAQ"></span>
@@ -112,8 +119,8 @@
       <li class="lang" title="Sprachwahl" ng-controller="LangCtrl">
         <span>
           <a href="" ng-click="changeLang('de_DE')">GER / </a>
-          <a href="" ng-click="changeLang('en_US')">ENG</a>   
-        </span>  
+          <a href="" ng-click="changeLang('en_US')">ENG</a>
+        </span>
       </li>
     </ul>
 </nav>
