--- a/app/components/user/profile/profile.html
+++ b/app/components/user/profile/profile.html
@@ -33,6 +33,8 @@
 		<input type="text" value="" placeholder="{{ 'USER_PROFILE_FLATTR' | translate }}" ng-model="user.socials['flattr']" />
 		<input type="text" value="" placeholder="{{ 'USER_PROFILE_APP' | translate }}" ng-model="user.socials['appnet']" />
 		<input type="text" value="" placeholder="{{ 'USER_PROFILE_TWITTER' | translate }}" ng-model="user.socials['twitter']" />
+    <input type="text" value="" placeholder="{{ 'USER_PROFILE_XMPP' | translate }}" ng-model="user.socials['xmpp']" />
+    <input type="text" value="" placeholder="{{ 'USER_PROFILE_IRC' | translate }}" ng-model="user.socials['irc']" />
 		<input type="submit" value="{{ 'USER_PROFILE_LINK_SAVE' | translate }}" ng-click="saveSocials()" />
 		<action-status  success-text="{{ 'USER_PROFILE_LINK_SUCCESS' | translate }}"
 						fail-text="{{ 'USER_PROFILE_LINK_ERROR' | translate }}"
