extra statistics page reachable

--- a/app/components/sidebar/sidebar.html
+++ b/app/components/sidebar/sidebar.html
@@ -116,6 +116,11 @@
             </a>
         </li>
         -->
+      <li title="{{ 'SIDEBAR_FAQ_TITLE' | translate }}">
+            <a href="/statistics/">
+                <span class="icon-info"></span><span class="caption" translate="SIDEBAR_FAQ"></span>
+            </a>
+        </li>
       <li class="lang" title="Sprachwahl" ng-controller="LangCtrl">
         <span>
           <a href="" ng-click="changeLang('de_DE')">GER / </a>
