--- a/app/components/statistics/statistics.html
+++ b/app/components/statistics/statistics.html
@@ -1,5 +1,5 @@
 <h2>Statistik</h2>
 
-<div  ng-controller="StatisticsCtrl">
-  <my-scatter-chart class="chart"></my-scatter-chart>
+<div  ng-controller="MainCtrl">
+  <my-scatter-chart class="chart" data="logs"></my-scatter-chart>
 </div>
