language for statistics added

--- a/app/components/sidebar/sidebar.html
+++ b/app/components/sidebar/sidebar.html
@@ -116,7 +116,7 @@
             </a>
         </li>
         -->
-      <li title="{{ 'SIDEBAR_FAQ_TITLE' | translate }}">
+      <li title="{{ 'SIDEBAR_STATISTICS_TITLE' | translate }}">
             <a href="/statistics/">
                 <span class="icon-info"></span><span class="caption" translate="SIDEBAR_FAQ"></span>
             </a>
