--- a/app/components/sidebar/sidebar.html
+++ b/app/components/sidebar/sidebar.html
@@ -118,7 +118,7 @@
         -->
       <li title="{{ 'SIDEBAR_STATISTICS_TITLE' | translate }}">
             <a href="/statistics/">
-                <span class="icon-info"></span><span class="caption" translate="SIDEBAR_FAQ"></span>
+                <span class="icon-info"></span><span class="caption" translate="SIDEBAR_STATISTICS"></span>
             </a>
         </li>
       <li class="lang" title="Sprachwahl" ng-controller="LangCtrl">
