--- a/app/components/statistics/statistics.html
+++ b/app/components/statistics/statistics.html
@@ -1,6 +1,7 @@
 <h2>Statistik</h2>
 
 <div ng-controller="StatisticsCtrl">
+  {{words}}
   <wordcloud
     words="words"
     on-click="myOnClickFunction(element)"
