bugfix appearance wordcloud

--- a/app/components/statistics/statistics.html
+++ b/app/components/statistics/statistics.html
@@ -2,7 +2,7 @@
 
 <div class="box-wrapper" ng-controller="StatisticsCtrl" ng-init="getWords()">
   <p>
-    <span translate="WORDCLOUD_WELCOME"></span>
+    <p translate="WORDCLOUD_WELCOME"></p>g
     <wordcloud
       words="words"
       on-click="myOnClickFunction(element)">
