wordlcoud for podcasts improved

--- a/app/components/archive/podcast/podcast.html
+++ b/app/components/archive/podcast/podcast.html
@@ -11,7 +11,7 @@
 	</div>
 
 </div>
-<div ng-controller="StatisticsCtrl" ng-init="getWords()">
+<div ng-controller="StatisticsCtrl" ng-init="getPodcastWords()">
   <wordcloud
     words="words"
     height="100">
