--- a/app/components/statistics/statistics.html
+++ b/app/components/statistics/statistics.html
@@ -2,7 +2,8 @@
 
 <div class="box-wrapper" ng-controller="StatisticsCtrl" ng-init="getWords()">
   <p>
-    <p translate="WORDCLOUD_WELCOME"></p>g
+    <p translate="WORDCLOUD_WELCOME"></p>
+  k
     <wordcloud
       words="words"
       on-click="myOnClickFunction(element)">
