improved scaling for fontsize of wordcloud

--- a/app/components/statistics/statistics.html
+++ b/app/components/statistics/statistics.html
@@ -4,6 +4,7 @@
   <p>
     <p translate="WORDCLOUD_WELCOME"></p>
     <wordcloud
+      width="1000"
       words="words"
       on-click="myOnClickFunction(element)">
   </wordcloud>
