adding chart.js, angles and basic chart to statistics html

--- a/app/components/statistics/statistics.html
+++ b/app/components/statistics/statistics.html
@@ -10,3 +10,7 @@
   </wordcloud>
   </p>
 </div>
+
+<div ng-controller="BarCtrl">
+   <canvas barchart options="options" data="chart" width="500" height="300"></canvas>
+</div>
