adding dummy bar chart in the target pages

--- a/app/components/archive/podcast/podcast.html
+++ b/app/components/archive/podcast/podcast.html
@@ -18,6 +18,9 @@
   </div>
 </div>
 
+<div ng-controller="BarCtrl">
+    <canvas class="barchart" barchart options="options" data="chart" width="500" height="300"></canvas>
+</div>
 <!--
 <p>Durchschnitt: <strong>5 Podcaster</strong> und <strong>4 Shownoter</strong> pro Sendung</p>
 -->
