--- a/app/components/archive/archive/archive.html
+++ b/app/components/archive/archive/archive.html
@@ -12,6 +12,10 @@
 
 <h3 translate="ARCHIVE_ALL_SHOWS"></h3>
 
+<div ng-controller="BarCtrl">
+	    <canvas class="barchart" barchart options="options" data="chart" width="500" height="300"></canvas>
+</div>
+
 <div class="archive">
     <archivebox ng-repeat="pod in podcasts" pod="pod"></archivebox>
 </div>
