adding timeline into archive and podcast without filtering, order of elements is not correct

--- a/app/components/archive/archive/archive.html
+++ b/app/components/archive/archive/archive.html
@@ -12,8 +12,8 @@
 
 <h3 translate="ARCHIVE_ALL_SHOWS"></h3>
 
-<div ng-controller="BarCtrl">
-	    <canvas class="barchart" barchart options="options" data="chart" width="500" height="300"></canvas>
+<div ng-controller="StatisticsCtrl" ng-init="getPodcastTimeline()">
+    <canvas class="barchart" barchart options="options" data="timeline" width="500" height="300"></canvas>
 </div>
 
 <div class="archive">
