--- a/app/components/archive/podcast/podcast.html
+++ b/app/components/archive/podcast/podcast.html
@@ -18,9 +18,10 @@
   </div>
 </div>
 
-<div ng-controller="BarCtrl">
-    <canvas class="barchart" barchart options="options" data="chart" width="500" height="300"></canvas>
+<div ng-controller="StatisticsCtrl" ng-init="getEpisodeTimeline(podcast.slug)">
+    <canvas class="barchart" barchart options="options" data="timeline" width="500" height="300"></canvas>
 </div>
+
 <!--
 <p>Durchschnitt: <strong>5 Podcaster</strong> und <strong>4 Shownoter</strong> pro Sendung</p>
 -->
