--- a/app/components/archive/archive/archive.html
+++ b/app/components/archive/archive/archive.html
@@ -13,7 +13,7 @@
 <h3 translate="ARCHIVE_ALL_SHOWS"></h3>
 
 <div ng-controller="StatisticsCtrl" ng-init="getPodcastTimeline()">
-    <canvas class="barchart" barchart options="options" data="timeline" width="500" height="300"></canvas>
+    <canvas  width="250" height="150" id="bar" class="chart chart-bar" chart-data="data" chart-labels="labels" chart-series="series" chart-click="onClick"></canvas>
 </div>
 
 <div class="archive">
