Timeline for episode

--- a/app/components/archive/podcast/podcast.html
+++ b/app/components/archive/podcast/podcast.html
@@ -19,7 +19,7 @@
 </div>
 
 <div ng-controller="StatisticsCtrl" ng-init="getEpisodeTimeline(podcast.slug)">
-    <canvas  width="500" height="300" id="bar" class="chart chart-bar barchart" chart-data="data" chart-labels="labels" chart-series="series" chart-click="onClick"></canvas>
+    <canvas  width="500" height="300" id="bar" class="chart chart-bar barchart" chart-data="data" chart-labels="labels" chart-series="series" chart-click="onClickEpisodes"></canvas>
 </div>
 
 <!--
